Troubleshooting layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -213,10 +213,11 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
+  height: fit-content;
 }
 
 .btn .icon {
@@ -304,6 +305,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -407,6 +409,16 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan .card__body {
+    display: flex;
+    flex-wrap: wrap;
+    height: 40rem;
+  }
+
+  .plan .card__body .btn {
+    align-self: flex-end;
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -516,7 +528,7 @@ a {
 }
 
 .testimonial__image {
-  padding: 3rem 8rem;
+  padding: 2rem 4rem;
   position: relative;
 }
 
@@ -526,8 +538,8 @@ a {
 
 .testimonial__image > .icon-container {
   position: absolute;
-  right: 48px;
-  top: 5rem;
+  right: 8px;
+  top: 4rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -552,9 +564,18 @@ a {
 
 /* Callouts */
 
+.block__callout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(180deg, #fefefe 50%, #232323 50%);
+}
+
 .callout {
   padding: 4rem;
   border-radius: 5px;
+  max-width: fit-content;
+  margin: auto 4rem;
 }
 
 .callout--primary {
@@ -578,6 +599,10 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .block__callout {
+    background: linear-gradient(180deg, #fefefe 33.33%, #232323 33.33%);
+  }
+
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
@@ -589,6 +614,16 @@ a {
   .callout .btn {
     justify-self: start;
     margin: 0 2rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .callout {
+    margin: auto 8rem;
+  }
+
+  .callout .grid--1x2 {
+    gap: 5rem;
   }
 }
 
@@ -604,7 +639,7 @@ a {
   font-size: 3rem;
 }
 
-.collapsible__chevron {
+.collapsible__toggler {
   transform: rotate(-90deg);
   transition: transform 0.3s;
 }
@@ -616,7 +651,7 @@ a {
   transition: all 0.3s;
 }
 
-.collapsible--expanded .collapsible__chevron {
+.collapsible--expanded .collapsible__toggler {
   transform: rotate(0);
 }
 
@@ -763,8 +798,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -891,7 +927,7 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 
-  .footer .collapsible__chevron {
+  .footer .collapsible__toggler {
     display: none;
   }
 
@@ -913,7 +949,18 @@ a {
     border: 0;
   }
 
+  .footer__section li {
+    font-size: 1.4rem;
+    margin: 1rem 0;
+  }
+
   .footer__heading {
     font-size: 1.6rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .footer__brand {
+    margin-right: 1rem;
   }
 }
